# RedWolf

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  RedWolf.sln  RedWolf.smproj  changelog.txt  dependencies.drawio
RedWolf/: CMakeLists.txt  RedWolf.vcxproj  RedWolf.vcxproj.filters  RedWolfManager.cpp  RedWolfManager.hpp  common.hpp  common.hpp.in  redwolf.hpp
RedWolf/alg/: Search.hpp  Sorting.hpp  search.hpp  sort.hpp
RedWolf/cont/: ConstexprMap.hpp  concepts.hpp
RedWolf/core/: Application.cpp  Application.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseGUIApplication.cpp  BaseGUIApplication.hpp  BaseObject.cpp  BaseObject.hpp  Component.ixx  EntityDB.ixx  GUIApplication.hpp  IObject.hpp  Object.cpp  Object.hpp  aliases.hpp  aliases.ixx  concepts.hpp  concepts.ixx
RedWolf/dat/: KVPair.hpp  LogMsg.cpp  LogMsg.hpp  MVPair.hpp  SettingsNode.cpp  SettingsNode.hpp  VersionInfo.cpp  VersionInfo.hpp
RedWolf/docs/html/: _app_8hpp_source.html  _error_8hpp.js  _error_8hpp_source.html  _log_8hpp_source.html  _red_wolf_8hpp.html  _red_wolf_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classrw_1_1_app-members.html  classrw_1_1_app.html  classrw_1_1_app.js  classrw_1_1_fixed_queue.js  classrw_1_1_log-members.html  classrw_1_1_log.html  classrw_1_1gl_1_1_g_l_buffer.html  classrw_1_1gl_1_1_messages-members.html  classrw_1_1gl_1_1_messages.html  classrw_1_1gl_1_1_texture-members.html  classrw_1_1gl_1_1_texture.js  core_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a33bad952c07cd29bb880b81af77f0cf.html  dir_a33bad952c07cd29bb880b81af77f0cf.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d5a2f9dff4c5b297680fd0d139b4e23c.html  dir_d5a2f9dff4c5b297680fd0d139b4e23c.js  entrypoint_8hpp.html  entrypoint_8hpp_source.html  error_8hpp.html  error_8hpp.js  error_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  (+10 more)
RedWolf/events/: BaseEvent.hpp  ButtonPressEvent.hpp  DataReadyEvent.hpp  DrawEvent.hpp  EventHandler.cpp  EventHandler.hpp  TimeoutEvent.hpp  WindowCloseEvent.hpp  WindowResizeEvent.hpp  aliases.hpp  concepts.hpp
RedWolf/evt/: DataReadyEvent.hpp  Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  IEventHandler.hpp  TimeoutEvent.hpp  aliases.hpp
RedWolf/gfx/: BaseEntity.cpp  BaseEntity.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  concepts.hpp
RedWolf/include/RedWolf/: App.hpp  Log.hpp  RedWolf.hpp  algorithms.hpp  core.hpp  entrypoint.hpp  init.hpp  shapes.hpp  utility.hpp
RedWolf/io/: File.cpp  File.hpp  concepts.hpp  custom_formatters.hpp
RedWolf/libif/: GlfwManager.cpp  GlfwManager.hpp  VulkanManager.cpp  VulkanManager.hpp
RedWolf/libif/glfw/: GlfwManager.cpp  GlfwManager.hpp  GlfwWindow.cpp  GlfwWindow.hpp
RedWolf/libif/vulkan/: VulkanManager.cpp  VulkanManager.hpp
RedWolf/lif/glfw/: GlfwManager.cpp  GlfwManager.hpp  Manager.cpp  Manager.hpp  Window.cpp  Window.hpp
RedWolf/lif/vma/: Allocator.cpp  Allocator.hpp  Buffer.hpp  Initialiser.hpp
RedWolf/lif/vulkan/: BaseObject.cpp  BaseObject.hpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DebugUtilsMessenger.cpp  DebugUtilsMessenger.hpp  Device.cpp  Device.hpp  DeviceBase.cpp  DeviceBase.hpp  Fence.cpp  Fence.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FunctionPointers.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  InstanceBase.cpp  InstanceBase.hpp  Interface.cpp  Interface.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineLayout.cpp  PipelineLayout.hpp  Queue.cpp  Queue.hpp  QueueFamilies.hpp  RenderPass.cpp  RenderPass.hpp  Semaphore.cpp  (+12 more)
RedWolf/net/: BaseSocket.cpp  BaseSocket.hpp  UdpSocket.cpp  UdpSocket.hpp
RedWolf/shaders/fragment/: base.frag
RedWolf/shaders/vertex/: base.vert
RedWolf/src/: App.cpp  Log.cpp  algorithms.cpp  core.cpp  init.cpp
RedWolf/src/data/: Event.cpp  VBORect.cpp
RedWolf/src/gl/: Buffer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  VAO.cpp  error.cpp  init.cpp
RedWolf/src/io/: Parser.cpp  Text.cpp
RedWolf/src/ui/: Entity.cpp  Window.cpp
RedWolf/text/: string_utils.cpp  string_utils.hpp
RedWolf/thread/: Mutex.hpp  ThreadPool.cpp  ThreadPool.hpp
RedWolf/time/: DateTime.cpp  DateTime.hpp  Timer.cpp  Timer.hpp  concepts.hpp  constants.hpp
RedWolf/ui/: BaseWindow.cpp  BaseWindow.hpp  concepts.hpp
RedWolf/util/: Logger.cpp  Logger.hpp  RandomGenerator.cpp  RandomGenerator.hpp  SettingsManager.cpp  SettingsManager.hpp
RedWolf/utils/: Logger.cpp  Logger.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Settings.cpp  Settings.hpp  SettingsManager.cpp  SettingsManager.hpp
RedWolfEditor/: CMakeLists.txt
RedWolfEditor/include/RedWolfEditor/: editor.hpp
RedWolfEditor/src/: editor.cpp
RedWolfSandbox/: CMakeLists.txt  EventTester.cpp  EventTester.hpp  MainApplication.cpp  MainApplication.hpp  MainWindow.cpp  MainWindow.hpp  TestEntity.cpp  TestEntity.hpp  main.cpp
RedWolfSandbox/config/: config.ini
RedWolfSandbox/include/RedWolfSandbox/: MainWindow.hpp
RedWolfSandbox/src/: MainWindow.cpp  main.cpp
RedWolfTest/: CMakeLists.txt  RedWolfTest.vcxproj  RedWolfTest.vcxproj.filters
RedWolfTest/cont/: test_ConstexprMap.cpp
RedWolfTest/core/: TestComponent.cpp  test_Object.cpp
RedWolfTest/dat/: test_KVPair.cpp  test_LogMsg.cpp  test_VersionInfo.cpp
RedWolfTest/evt/: test_Event.cpp  test_EventHandler.cpp
RedWolfTest/thread/: test_ThreadPool.cpp
RedWolfTest/time/: test_DateTime.cpp
RedWolfTests/: CMakeLists.txt
RedWolfTests/data/: averageText.txt
RedWolfTests/include/: utility.hpp
RedWolfTests/src/: FixedQueueTest.cpp  LogTest.cpp  binary_searchTest.cpp  google_tests.cpp
RedWolfTests/src/data/: VBORectTest.cpp
logo/: RedWolf.drawio
src/RedWolf/: CMakeLists.txt  common.hpp
src/RedWolfSandbox/: CMakeLists.txt  example_layer.cpp  example_layer.hpp  sandbox_app.cpp  sandbox_app.hpp
(+436 files in other folders)
